--- a/mako/config
+++ b/mako/config
@@ -1,27 +1,18 @@
-sort=-time
-layer=overlay
-background-color=#2e3440
-width=300
-height=110
+layer=top
+anchor=top-right
+background-color=#181825
+border-color=#7aa2f7
+border-radius=5
 border-size=2
-border-color=#88c0d0
-border-radius=15
-icons=0
-max-icon-size=64
-default-timeout=5000
-ignore-timeout=1
-font=monospace 14
-
-[urgency=low]
-border-color=#cccccc
-
-[urgency=normal]
-border-color=#d08770
+margin=20
+width=315
+height=200
+text-color=#cdd6f4
+font=Hack Nerd Font 9.5
+max-icon-size=48
+max-visible=10
+default-timeout=10000
 
 [urgency=high]
-border-color=#bf616a
+border-color=#ed8796
 default-timeout=0
-
-[category=mpd]
-default-timeout=2000
-group-by=category
