--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -213,6 +213,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, X, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
