--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -151,7 +151,8 @@ dwindle {
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = master
+    new_status = slave
+
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
@@ -212,7 +213,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = ALT, J, togglesplit, # dwindle
 bind = $mainMod, X, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
@@ -224,6 +225,15 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, down, movefocus, d
 bind = $mainMod, j, movefocus, d
+
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, k, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
+bind = $mainMod SHIFT, j, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
