Updated flake  + sddm

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -16,6 +16,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1, 1920x1200@59.95000, 0x0, 1
+monitor = DP-3, 1920x1080@75.03, 1920x0, 1.0
 
 
 ###################
@@ -142,6 +143,7 @@ animations {
 # windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
 # windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 # windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+windowrulev2 = float,title:^(Extension: \(Bitwarden Password Manager\) - Bitwarden — Mozilla Firefox)$
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
