Lots of changes oops

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -62,12 +62,12 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
-    border_size = 2
+    border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(FFFFFFaa)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -81,7 +81,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -214,6 +214,9 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, D, exec, $menu
+bind = $mainMod, A, exec, ~/.config/hypr/window_swapper.sh
+bind = ALT SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+bind = ALT SHIFT, A, exec, grim - | wl-copy
 bind = $mainMod, P, pseudo, # dwindle
 bind = ALT, J, togglesplit, # dwindle
 bind = $mainMod, X, exec, hyprlock
