--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -214,7 +214,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, A, exec, ~/.config/hypr/window_swapper.sh
+bind = $mainMod, A, exec, rofi -show window
 bind = ALT SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
 bind = ALT SHIFT, A, exec, grim - | wl-copy
 bind = $mainMod, P, pseudo, # dwindle
