browser + spotify keybinds, helix editor in homemanager

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -29,6 +29,8 @@ monitor = DP-3, 1920x1080@75.03, 1920x0, 1.0
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun -show-icons
+$browser = firefox
+$music = spotify
 
 
 #################
@@ -211,6 +213,8 @@ bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, F, exec, $browser
+bind = $mainMod, W, exec, $music
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, D, exec, $menu
