edited mako config

--- a/mako/config
+++ b/mako/config
@@ -1,18 +1,9 @@
-layer=top
-anchor=top-right
-background-color=#181825
-border-color=#7aa2f7
-border-radius=5
-border-size=2
-margin=20
-width=315
-height=200
-text-color=#cdd6f4
 font=Hack Nerd Font 9.5
-max-icon-size=48
-max-visible=10
+background-color=#15171880
+text-color=#cdd6f4
+border-color=#151718
 default-timeout=10000
 
 [urgency=high]
-border-color=#ed8796
-default-timeout=0
+text-color=#CD3F45
+
