Commented out unused keybinds

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -209,14 +209,14 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, RETURN, exec, $terminal
+# bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, exec, $browser
 bind = $mainMod, W, exec, $music
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+# bind = $mainMod, R, exec, $menu
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, A, exec, rofi -show window
 bind = ALT SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
