Added resize mode in hyprland, organised shell scripts, sorted wallpapers, added various programs, added monero waybar module

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -235,6 +235,7 @@ bind = $mainMod, k, movefocus, u
 bind = $mainMod, down, movefocus, d
 bind = $mainMod, j, movefocus, d
 
+# Move windows with mainMod, shift and arrow keys
 bind = $mainMod SHIFT, left, movewindow, l
 bind = $mainMod SHIFT, h, movewindow, l
 bind = $mainMod SHIFT, right, movewindow, r
@@ -272,7 +273,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
+# Scroll through existing workspaces with mainMod + scroll / tab
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, TAB, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -281,6 +282,24 @@ bind = $mainMod SHIFT, TAB, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Create a submap to allow for resizing windows with the keyboard
+bind = $mainMod, R, submap, resize
+submap = resize
+
+# Sets up repeatable binds to allow resizing the active window
+binde = , right, resizeactive, 10 0
+binde = , l, resizeactive, 10 0
+binde = , left, resizeactive, -10 0
+binde = , h, resizeactive, -10 0
+binde = , up, resizeactive, 0 -10
+binde = , k, resizeactive, 0 -10
+binde = , down, resizeactive, 0 10
+binde = , j, resizeactive, 0 10
+
+# Sets up the bind to escape and return to the global submap
+bind = , escape, submap ,reset
+submap = reset
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
