--- a/hyprland/hyprlock.conf
+++ b/hyprland/hyprlock.conf
@@ -1,7 +1,7 @@
 
 background {
     monitor =
-    path = $HOME/dotfiles/gluee.png   # only png supported for now
+    path = $HOME/dotfiles/wallpapers/storm.png   # only png supported for now
     # color = $color1
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
