Package updates, added todo-cli, fixed swww

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -28,7 +28,7 @@ monitor = DP-3, 1920x1080@75.03, 1920x0, 1.0
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = rofi -show drun -show-icons
+$menu = rofi -show drun 
 $browser = firefox
 $music = spotify
 
