--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -218,7 +218,7 @@ bind = $mainMod, W, exec, $music
 bind = $mainMod, V, togglefloating,
 # bind = $mainMod, R, exec, $menu
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, A, exec, rofi -show window
+bind = $mainMod, A, exec, ~/.config/rofi/window-selector.sh
 bind = ALT SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
 bind = ALT SHIFT, A, exec, grim - | wl-copy
 bind = $mainMod, P, pseudo, # dwindle
