Hopefully fixed the timezones on the clock

--- a/hosts/xps/home/waybar/config.jsonc
+++ b/hosts/xps/home/waybar/config.jsonc
@@ -65,6 +65,7 @@
     },
     "clock": {
       "format": "  {:%a %e %b %H:%M}",
+      "timezone": "Europe/London",
       "tooltip-format": "<tt>{calendar}</tt>",
       "calendar": {
         "mode": "month",
