--- a/hosts/xps/home/hyprland/hyprland.conf
+++ b/hosts/xps/home/hyprland/hyprland.conf
@@ -212,6 +212,7 @@ bind = $mainMod, Q, exec, $terminal
 # bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, M, exec, mullvad-vpn 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, exec, $browser
 bind = $mainMod, W, exec, $music
