--- a/hosts/xps/home/waybar/config.jsonc
+++ b/hosts/xps/home/waybar/config.jsonc
@@ -32,12 +32,14 @@
       "separate-outputs": true,
       "rewrite": {
         "(.*) — Mozilla Firefox": "󰈹  $1",
+        "Mozilla Firefox": "󰈹",
         "(.*) — Zen Browser": "󰈹  Zen - $1",
         "(.*) - Google Chrome": "  $1",
         "(.*) - Visual Studio Code": "󰨞  $1",
         "(.*) - Spotify": "󰓇  $1",
         "(.*) - kitty": "  $1",
         "(nvim)(?: (.*))?": "  $1 $2",
+        "(hx)(?: (.*))?": "   $1 $2",
         "Signal": "  Signal",
         "(.*) — LibreOffice Writer": "  $1",
         "(.*) - Obsidian(.*)": "󱓧  $1",
